# lattice_qft

./: .gitignore  Cargo.toml  correlation_functions.ipynb  correlation_lenght_with_R.ipynb  correlation_length.py
data/: action.csv  cluster_binning.csv  cluster_results.csv  comp_energy_results.csv  corr_fn_fits.csv  correlation_lenght_analysis.ipynb  data_examination.ipynb  density_plots.ipynb  least_squares_data.csv  metropolis_2x2x2_test.xlsx  metropolis_binning.csv  metropolis_bins.csv  metropolis_graphs.xlsx  metropolis_results.csv  plot.csv  results.csv  results_comp.csv  results_comp_fit.csv  results_comp_second_moment.csv  results_corr.csv  results_fit.csv  results_second_moment.csv  sim_binning.csv  sim_data16.csv  sim_results.csv  simulation_analysis.ipynb  string_tension.ipynb  string_tension_results.csv  test_data.csv  test_data16.csv  test_data24.csv  test_data32.csv  test_data8.csv  test_results.csv
data/clst_metr_cmp/: binning_comp.xlsx  cluster_bins.csv  cluster_results.csv  metropolis_bins.csv  metropolis_results.csv
data/cluster_binning/: binning_sim_results.csv  bins0_001.csv  bins0_01.csv  bins0_1.csv  bins0_8.csv  bins1.csv  bins1_58.csv  bins2.csv  cluster_binning.xlsx
data/cluster_sim/: binning_fit_comp.xlsx  cluster_data.csv  cluster_metropolis_comparison.xlsx  cluster_results.csv
data/comp_correlation_stats/: correlation_0_err.csv  correlation_0_fits.csv  (+798 more)
graphs/: wilsonloop_test.xlsx
src/: action.rs  algorithm.rs  bonds.rs  cluster.rs  computation.rs  correlation_functions.ipynb  error.rs  export.rs  field.rs  field3d.rs  field_plot.py  fields.rs  form.rs  forms3d.rs  heightfield.rs  indexed_lattice3d.rs  kahan.rs  lattice.rs  lattice3d.rs  lib.rs  main.rs  metropolis.rs  observable.rs  outputdata.rs  plot.rs  simulation.rs  wilson.rs
(+24931 files in other folders)
