[package]
name = "lattice_qft"
version = "0.1.0"
edition = "2021"
default-run = "sim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
rand = "0.8.5"
rayon = "1.5.3"
serde = { version = "1.0.144", features = ["derive"] }
varpro = "0.4.0"
nalgebra = "0.30"

[profile.dev]
opt-level = 3

[[bin]]
name = "sim"
path = "src/bin/sim.rs"

[[bin]]
name = "cluster-check"
path = "src/bin/cluster_check.rs"