[package]
name = "lattice_qft"
version = "0.1.0"
edition = "2021"
default-run = "sim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
nalgebra = "0.32.2"
rand = "0.8.5"
rayon = "1.5.3"
serde = { version = "1.0.144", features = ["derive"] }
varpro = "0.6.0"

[profile.dev]
opt-level = 3
overflow-checks = true

[[bin]]
name = "sim"
path = "src/bin/sim.rs"
